--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 @charset "UTF-8";
+
+/*Variaveis e Configurações que podem ser ignoradas*/
+
 :root {
     --corA:#2B2D42;
     --corB: #8D99AE;
@@ -6,15 +9,40 @@
     --corD: #D80032;
     --corE: #EF233C;
 }
+
 * {
     margin: 0px;
     padding: 0px;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    display: none;
+}
+
+div#keyboard {
+    display: none;
+}
+
+/*CLASSES*/
+.justify {
+    text-align: justify;
+}
+.center {
+    text-align: center;
+}
+
+.destaque {
+    font-size: 1em;
+    color: red;
+}
+
+/*CORPO*/
 body {
     background-color: var(--corA);
 }
 
+/* LOGO TITULO MATHBOMB*/
 h1#title {
     position: absolute;
     left: 10px;
@@ -37,6 +65,7 @@ h1#title {
     text-align: center;
 }
 
+/* MAIN É A PARTE VERMELHA*/
 main {
     background-color: var(--corE);
 
@@ -47,45 +76,22 @@ main {
     margin-top: 10vh;
 }
 
+/* DIV MENU É A PRIMEIRA TELA BRANCA DO INDEX*/
+
 div#menu {
     position: relative;
     top: 7%;
     background-color: var(--corC);
 
-    width: 60%;
+    width: 90%;
     height: 80%;
     max-width: 700px;
     padding: 1em;
 
     margin: auto;
-    margin-top: 10px;
 
     font-family: Consolas, monospace;
     font-size: 1.2em;
-}
-
-div#game {
-    width: 60%;
-    height: 80%;
-    max-width: 700px;
-    padding: 1em;
-    display: none;
-    background-color: white;
-    margin: auto;
-    position: relative;
-    top: 7%;
-    background-color: var(--corC);
-}
-div#game > p {
-    margin-top: 10%;
-    margin-bottom: 50px;
-    font-size: 3em;
-    font-family: Consolas, monospace;
-}
-
-div#game > input{
-    font-size: 2em;
-    width: 80%;
 }
 
 button#start {
@@ -105,6 +111,74 @@ button#start:active {
     box-shadow: 0px 3px 0px darkgreen;
 }
 
+/*DIV GAME É A PARTE BRANCA ONDE EXISTE JOGABILIDADE*/
+div#game {
+    position: relative;
+    top: 7%;
+    background-color: var(--corC);
+
+    width: 90%;
+    height: 80%;
+    max-width: 700px;
+    padding: 1em;
+
+    margin: auto;
+    display: none;
+
+    font-family: Consolas, monospace;
+    font-size: 1.2em;
+    
+    background-color: var(--corC);
+}
+
+div#game > p {
+    margin-top: 10%;
+    margin-bottom: 50px;
+    font-size: 1.2em;
+    font-family: Consolas, monospace;
+}
+
+div#game > p#calculation {
+    font-size: 3em;
+    margin-top: 0px;
+}
+
+div#game > input#inputPC{
+    font-size: 3em;
+    width: 80%;
+    text-align: center;
+}
+
+div#keyboard {
+    width: 164px;
+    margin: auto;
+}
+
+div#keyboard p#visor {
+    height: 50px;
+    width: 158px;
+    background-color: rgba(0, 0, 0, 0.06);
+    outline: 1px solid rgba(0, 0, 0, 0.5);
+    margin: auto;
+    margin-bottom: 2px;
+}
+
+div#keyboard > button.btnNum {
+    width: 50px;
+    height: 50px;
+    margin: 2px;
+    background-color: rgba(0, 0, 0, 0.06);
+    outline: 1px solid rgba(0, 0, 0, 0.5);
+    border:none;
+}
+div#keyboard > button.btnNum:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+div#keyboard > button.btnNum:active {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+/*RODAPÉ*/
 footer {
     background-color: gray;
     font-family: Arial, Helvetica, sans-serif;
@@ -112,22 +186,9 @@ footer {
     text-align: center;
     padding: 5px;
 }
-
 footer > p > a {
     color: white;
     text-decoration: none;
-}
-
-.justify {
-    text-align: justify;
-}
-.center {
-    text-align: center;
-}
-
-span#destaque {
-    font-size: 1em;
-    color: red;
 }
 
 @media (max-width:750px){
@@ -137,5 +198,15 @@ span#destaque {
     div#game {
         width: 70vw;
         width: 80%;
+    }
+   
+}
+
+@media (max-width:499px){
+    div#keyboard {
+        display: block;
+    }
+    input#inputPC {
+        display: none;
     }
 }
